<resources>
    <string name="app_name">Lang Import</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="action_lang">Настройки словарей</string>
    <string name="action_conf">Общие настройки</string>
    <string name="action_wcolor">Белый фон</string>
    <string name="action_bcolor">Черный фон</string>
    <string-array name="langs">
        <item>en</item>
        <item>tl</item>
        <item>ja</item>
        <item>fr</item>
        <item>it</item>
        <item>ru</item>
        <item>de</item>
    </string-array>
    <string name="css"><![CDATA[
<style>
        .tooltip {
          position: relative;
          display: inline-block;
          border-bottom: 1px dotted black;
        }

        .tooltip .tooltiptext {
          visibility: hidden;
          width: 120px;
          background-color: black;
          color: #fff;
          text-align: center;
          border-radius: 6px;
          padding: 5px 0;

          /* Position the tooltip */
          position: absolute;
          z-index: 1;
          top: 100%;
          left: -10%;
        }

        .tooltip:hover .tooltiptext {
          visibility: visible;
        }
</style>
]]></string>
    <string name="cfg_informers">Источники новостей</string>
    <string name="cfg_rss_add">Добавить rss</string>
    <string name="cfg_rss_rm">Удалить rss</string>
    <string name="loading">loading…</string>
    <string name="url_hint">URL</string>
    <string name="ok">Готово</string>
    <string name="name">Имя</string>
    <string name="delete">Удалить</string>
    <string name="make_dict">Создать словарь</string>
    <string name="pls_enter_name_dict">Введите имя словаря</string>
    <string name="orig_hint">Оригинал</string>
    <string name="translate_hint">Перевод</string>
    <string name="orig">Оригинал</string>
    <string name="translate">Перевод</string>
    <string name="src_txt">Исходный текст</string>
    <string name="sample_title">Sample title</string>
    <string name="ms">2dp</string>
    <string name="bs">20dp</string>
    <string name="alert_title">Внимание!</string>
    <string name="alert_question">Вы действительно хотите удалить словарь</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="dct_dlt">Словарь удален.</string>
    <string name="dic_not_used">Словарь не используется</string>
    <string name="dic_used">Активирован словарь</string>
    <string name="about">Credits  We want to thank those projects greatly: it\'s very hard or even impossible to make our system without them.\n\n
        Used repositories:\n
         -material-components-android  = https://github.com/material-components/material-components-android \n
         -anko = https://github.com/Kotlin/anko \n
         -klaxon = https://github.com/cbeust/klaxon \n
         -jsoup = https://github.com/jhy/jsoup \n
         -picasso = https://github.com/square/picasso \n
         -junit4 = https://github.com/junit-team/junit4 \n
         -volley = https://github.com/google/volley \n
         -simplexml = https://github.com/ngallagher/simplexml \n
    </string>
    <string name="about_btn">О приложении</string>
    <string name="hollow" />
    <string name="program_desc">The the application - RSS reader for phones with the Android operating system. \n
        Main usage: app get random words from articles and translate it into the selected language.</string>
    <string name="app_author">Authors \n
- Kozlov Ivan \n
- Baryshnikov Aleksandr \n</string>
    <string name="link_txt">Полная версия статьи.</string>
    <string name="translateErrorLoad">Translate Load - connection error</string>
</resources>
