<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#1B2B79"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/program_desc"
            android:textColor="#1B2B79"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/hollow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hollow" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/about"
            android:textColor="#607797" />

        <TextView
            android:id="@+id/app_auth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_author"
            android:textColor="#1B2B79"
            android:textStyle="italic" />

    </LinearLayout>
</ScrollView>