<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--EXAMPLE BUTTONS -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/informers"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/cfg_informers"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textColor="#303F9F"
            android:textColorLink="#8C9EFF" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/customInformersAdd"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/cfg_rss_add"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textColor="#303F9F"
            android:textColorLink="#8C9EFF" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/customInformersRm"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/cfg_rss_rm"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textColor="#303F9F"
            android:textColorLink="#8C9EFF" />

        <TextView
            android:id="@+id/visualPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        <SeekBar
            android:id="@+id/confPartBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:max="30"
            android:maxHeight="3dp"
            android:minHeight="2dp"
            android:progressDrawable="@drawable/seek_line"
            android:thumbTint="@color/black" />

        <TextView
            android:id="@+id/visualTargetLang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2" />
    </LinearLayout>
</ScrollView>